# MANIPULATE-2020

./: .gitattributes  README.md
input/: Ag109g_IRDFF-II_cor_plot_interface  Ag109g_IRDFF-II_groupr_convert  As-75_ENDFB-VIII_0_xsec_nopart_DK_metrics_NJOY2016_groupr_convert  As-75_ENDL84_xsec_nopart_DK_recreate_legacy_metrics_NJOY2016_groupr_convert  As-75_ENDL84_xsec_nopart_DK_recreate_legacy_metrics_NJOY2016_groupr_convert.$$$  As-ele_SA_in_GaAs_ENDFB_VIII_0_770grp  As-ele_SA_in_GaAs_ENDL84_770grp  As_ENDL84_xsec_metrics_NJOY2016_groupr_convert  As_ENDL84_xsec_metrics_NJOY2016_groupr_convert.$$$  Cf252_640nrg_IRDFF-II_MF33_spectrum_list  Cf252_640nrg_IRDFF_MF33_spectrum_list  Cf252_IRDFF-II_MF33_cor_plot_interface  Ga-69_TENDL-2019_xsec_nonine_nopart_DK_metrics_NJOY2016_groupr_convert  Ga-69_TENDL-2019_xsec_nonine_nopart_DK_metrics_NJOY2016_groupr_convert.$$$  Ga-69_TENDL-2019_xsec_nopart_DK_metrics_NJOY2016_groupr_convert  Ga-69_nolow_nopart_770grp_combinations  Ga-69_nolow_nopart_770grp_combinations.$$$  Ga-71_TENDL-2019_xsec_nopart_DK_metrics_NJOY2016_groupr_convert  Ga-ele_ENDFB6_xsec_ASTM-DE_metrics_NJOY2016_groupr_convert  Ga-ele_ENDFB6_xsec_ASTM-DE_recreation_metrics_NJOY2016_groupr_convert  Ga-ele_ENDFB6_xsec_DK_metrics_NJOY2016_groupr_convert  Ga-ele_ENDFB6_xsec_metrics_NJOY2016_groupr_convert  Ga-ele_ENDFB6_xsec_metrics_NJOY2016_groupr_convert.$$$  Ga-ele_ENDFB6_xsec_nopart_DK_metrics_NJOY2016_groupr_convert  Ga-ele_ENDFB6_xsec_spKP_metrics_NJOY2016_groupr_convert  Ga-ele_SA_in_GaAs_TENDL-2019_770grp  GaAs_damage_metric_fold_for_UT_14MeV  GaAs_damage_metric_fold_for_UT_14p5MeV  GaAs_damage_metric_fold_for_UT_ACRR-FF-CC  GaAs_damage_metric_fold_for_UT_acrrcf28  GaAs_damage_metric_fold_for_UT_barnob6  GaAs_damage_metric_fold_for_UT_spr3cc  GaAs_dose_metrics  GaAs_elastic_nopart_770grp_combinations  GaAs_elastic_nopart_770grp_combinations.$$$  (+51 more)
source/: CMakeLists.txt  balanc.f  balbak.f  build_manipulate.sh  cdiv.f  correct.f  correct.f.$$$  cov_combine.f  cov_norm.f  covlate.f  covlate.f.$$$  covread.f  df.f  dummy.f  eigen_out.f  file_name_logic.add  filein.f  filein_response.f  fitmd.f  fold.f  force_upper.f  grprin.f  grprin.f.$$$  grspin.f  grspin.f.$$$  hqr.f  hqr2.f  i1mach.f  infcntl.cmn  integral_pka_grprin.f  location.cmn  makefile  makefile.$$$  manipulate.f  manipulate.f.$$$  mpicom.cmn  mpif.h  orthes.f  ortran.f  pka_grprin.f  (+14 more)
(+1210 files in other folders)
